# NaumiAgent

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  config.yaml.example  docker-compose.yaml  naumi-bin  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release-binaries.yml
.naumi/: harness.yaml
deploy/: config.container.yaml
docker/: entrypoint.sh
docs/: 01-architecture-overview.md  02-core-engine.md  03-tool-system.md  04-memory-system.md  05-planning-reasoning.md  06-multi-agent.md  07-safety-guardrails.md  08-implementation-plan.md  09-tui-design.md  10-streaming-design.md  11-api-websocket-design.md  12-optimization-roadmap.md  13-cli-tui-claude-code-roadmap.md  14-claude-code-source-audit.md  14-future-architecture-refactor-plan.md  15-model-provider-configuration.md  README.md  deployment.md  governance.json  pursuit_optimization_log.md  terminal-ui-integration.md
docs/architecture/: arc-01-domain-ownership.json  arc-01-import-graph-baseline.json
docs/design/: mac-agent-workbench-architecture.md  mac-agent-workbench-domain-model.md  mac-agent-workbench-event-protocol.md  mac-agent-workbench-governance.md  mac-agent-workbench-interface-spec.md  mac-agent-workbench-local-daemon-bridge.md  mac-agent-workbench-local-security-workspace.md  mac-agent-workbench-packaging-distribution.md  mac-agent-workbench-product-architecture-roadmap.md  mac-agent-workbench-swiftui-shell-architecture.md  windows-agent-workbench-implementation-plan.md  windows-agent-workbench-interface-spec.md
docs/development/: 00-program-charter.md  01-module-registry.md  02-delivery-review-protocol.md  03-acceptance-evidence-standard.md  04-cross-program-dependencies.md  05-execution-waves.md  06-final-audit-checklist.md  07-code-ownership-map.md  README.md  (+5 more)
packaging/: naumi.spec
scripts/: check_docs.py  install.ps1  install.sh
(+1617 files in other folders)
