[project]
name = "naumi-agent"
version = "0.1.202"
description = "通用智能 Agent 系统"
requires-python = ">=3.12"

dependencies = [
    # 核心
    "litellm>=1.60",
    "langgraph>=0.4",
    "langchain-core>=0.3",

    # 工具
    "mcp>=1.0",
    "playwright>=1.50",

    # 记忆
    "chromadb>=1.0",
    "aiosqlite>=0.21",

    # 接口
    "typer>=0.15",
    "rich>=14.0",
    "prompt-toolkit>=3.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "websockets>=14.0",

    # 安全与可观测
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "opentelemetry-api>=1.30",
    "opentelemetry-sdk>=1.30",

    # 工具辅助
    "httpx>=0.28",
    "readability-lxml>=0.8",
    "markdownify>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "mypy>=1.15",
]
docker = [
    "docker>=7.0",
]
e2b = [
    "e2b-code-interpreter>=1.0",
]

[project.scripts]
naumi = "naumi_agent.main:cli"
naumi-deploy = "naumi_agent.deploy:main"
naumi-ui-bridge = "naumi_agent.ui.bridge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/naumi_agent"]

[tool.hatch.build.targets.wheel.force-include]
"frontend/terminal-ui/package.json" = "naumi_agent/frontend/terminal-ui/package.json"
"frontend/terminal-ui/protocol-contract.json" = "naumi_agent/frontend/terminal-ui/protocol-contract.json"
"frontend/terminal-ui/src" = "naumi_agent/frontend/terminal-ui/src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires external services",
    "e2e: end-to-end tests",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
